@@ -722,7 +722,7 @@ cl_symbols[] = {
 {"READ-SEQUENCE", CL_ORDINARY, cl_read_sequence, -1, OBJNULL},
 {"READER-ERROR", CL_ORDINARY, NULL, -1, OBJNULL},
 {"READTABLE", CL_ORDINARY, NULL, -1, OBJNULL},
-{"READTABLE-CASE", CL_ORDINARY, NULL, -1, OBJNULL},
+{"READTABLE-CASE", CL_ORDINARY, cl_readtable_case, 1, OBJNULL},
 {"READTABLEP", CL_ORDINARY, cl_readtablep, 1, OBJNULL},
 {"REAL", CL_ORDINARY, NULL, -1, OBJNULL},
 {"REALP", CL_ORDINARY, cl_realp, 1, OBJNULL},
@@ -1137,6 +1137,7 @@ cl_symbols[] = {
 {SYS_ "PUT-PROPERTIES", SI_ORDINARY, si_put_properties, -1, OBJNULL},
 {SYS_ "PUT-SYSPROP", SI_ORDINARY, si_put_sysprop, 3, OBJNULL},
 {SYS_ "PUTPROP", SI_ORDINARY, si_putprop, 3, OBJNULL},
+{SYS_ "READTABLE-CASE-SET", SI_ORDINARY, si_readtable_case_set, 2, OBJNULL},
 {SYS_ "REM-F", SI_ORDINARY, si_rem_f, 2, OBJNULL},
 {SYS_ "REM-SYSPROP", SI_ORDINARY, si_rem_sysprop, 2, OBJNULL},
 {SYS_ "REPLACE-ARRAY", SI_ORDINARY, si_replace_array, 2, OBJNULL},
@@ -1295,8 +1296,9 @@ cl_symbols[] = {
 {KEY_ "INHERITED", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "INITIAL-ELEMENT", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "INPUT", KEYWORD, NULL, -1, OBJNULL},
-{KEY_ "INTERNAL", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "INSTANCE", KEYWORD, NULL, -1, OBJNULL},
+{KEY_ "INTERNAL", KEYWORD, NULL, -1, OBJNULL},
+{KEY_ "INVERT", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "IO", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "JUNK-ALLOWED", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "KEY", KEYWORD, NULL, -1, OBJNULL},
@@ -1319,6 +1321,7 @@ cl_symbols[] = {
 {KEY_ "OVERWRITE", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "PACKAGE", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "PATHNAME", KEYWORD, NULL, -1, OBJNULL},
+{KEY_ "PRESERVE", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "PRETTY", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "PRINT", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "PROBE", KEYWORD, NULL, -1, OBJNULL},
